--- a/index.html
+++ b/index.html
@@ -1,28 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css"/>
-    <title>webpage-1</title>
-</head>
-<body>
-    <div class="container">
-    <div class="box-1">
-        <h1>Join Our Community</h1>
-        <h2>30-day, hassle free money back guarantee</h2>
-        <p>Gain access to our full library of tutorials along with expert code reviews.<br>Perfect for anny developers who are serious abput honing their skills.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>CSS-ONE</title>
+  </head>
+  <body class="container">
+    <div class="join-our-community">
+      <h1>Join our community</h1>
+      <h2>30-day, hassle free money back guarantee</h2>
+      <p>
+        Gain access to our full library of tutorials along with expert code
+        reviews. <br />
+        Pefect for any developers who are serious about honing their skills.
+      </p>
     </div>
-    <div class="box-2">
-        <h2>Monthly Subscription</h2>
-        <p><span class="price">$29</span>per month</p><p>full access for less than $1 a day</p>
-        <button>Sign up</button>
+
+    <div class="pricing">
+      <h2>Monthly Subscription</h2>
+      <p><span class="price">$29</span> per month</p>
+      <p>Full access for less than $1 a day</p>
+      <button class="sign-up">Sign Up</button>
     </div>
-    <div class="box-3">
-        <h2>Why Us</h2>
-        <p>Tutorials by industry experts<br>Peer & expert code review<br>Coding exercises<br>Community forum<br>Flashcard decks<br>New videos every week</p>
+
+    <div class="why-us">
+      <h2>Why us</h2>
+      <p>peer & expert code review</p>
+      <p>Coding excercises</p>
+      <p>Access to our GitHub repos</p>
+      <p>Community form</p>
+      <p>Flashcard decks</p>
+      <p>New videos every week</p>
+      <!-- <p>
+        Tutorials by industry experts. Peer & expert code review Coding
+        exercises Access to our github repos Community forum Flash card decks
+        New videos every week
+      </p> -->
     </div>
-    </div>
-</body>
+  </body>
 </html>
