--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>CSS-ONE</title>
+    <title>CSS ONE</title>
   </head>
   <body class="container">
     <div class="join-our-community">
